# search-angel

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users_auth.py
backend/nginx/: nginx.conf
backend/nginx/conf.d/: search_angel.conf
backend/scripts/: backup.sh  create_indexes.py  deploy.sh  seed_data.py  setup-server.sh
backend/searxng/: settings.yml
backend/searxng-tor/: settings.yml
backend/src/search_angel/: __init__.py  main.py
backend/src/search_angel/api/: app.py  dependencies.py
backend/src/search_angel/api/middleware/: logging.py  privacy.py  timing.py
backend/src/search_angel/auth/: models.py  router.py  tokens.py
backend/src/search_angel/config/: __init__.py  settings.py
backend/src/search_angel/core/: deduplication.py  evidence.py  pipeline.py  query_processor.py  ranking.py  summarizer.py
backend/src/search_angel/db/: __init__.py  engine.py
backend/src/search_angel/embeddings/: encoder.py
backend/src/search_angel/premium/: ephemeral.py  phantom.py  router.py
backend/src/search_angel/privacy/: anonymizer.py  audit.py  session_manager.py
backend/src/search_angel/search/: bm25.py  client.py  hybrid.py  index_manager.py  vector.py  web.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_anonymizer.py  test_hybrid_search.py  test_query_processor.py  test_ranking.py
(+52 files in other folders)
