[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-angel"
version = "0.1.0"
description = "Privacy-first deep search engine with hybrid BM25 + vector search"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.5",
    "alembic>=1.14.0",
    "opensearch-py[async]>=2.7.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.3.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "psycopg2-binary>=2.9.9",
    "docker>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
nlp = [
    "spacy>=3.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/search_angel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true
